import "client.comm.proto";
import "client.team.proto";
package client;
 
// 小明的队伍进入副本
message team_raid_enter_req {
    required uint32 time = 1;
	optional server_head svr_head = 1000;
}

// 组队进入副本命令
message team_raid_enter_cmd {
    required uint32 role_id = 1; // 要进入副本的id
	required uint32 team_id = 2; // 进入的队伍ID
	required uint32 raid_id = 3; // 要进入的副本ID
}

// 尝试进入副本请求
message team_raid_try_enter_req {
    required uint32 role_id = 1; // 要进入副本的id
	required uint32 team_id = 2; // 进入的队伍ID
	required uint32 raid_id = 3; // 要进入的副本ID 
}

// 尝试进入副本结果
message team_raid_try_enter_rsp {
    required team_raid_try_enter_req req = 1;  
    required uint32 ret  = 2;
}
